testing overflow sroll fix

--- a/client/src/components/ListItems.css
+++ b/client/src/components/ListItems.css
@@ -27,7 +27,6 @@
   height: 42vh;
   width: 100%;
   overflow: scroll;
-  white-space: ;
   border: 1px solid purple;
 }
 
@@ -41,6 +40,7 @@
   margin-top: 1vh;
   margin-bottom: 1vh;
   border: 1px solid green;
+  white-space: nowrap;
 }
 
 /* ListItem elements */
